# Proyecto-RH

./: DOCUMENTACION.md  README.md  pyproject.toml
core/CFE/: cv_parser.py  database.py  email_manager.py  pdf_builder.py
src/: cv_converter.py  database.py  email_manager.py  main.py
