[project]
name = "proyecto-rh"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.82.0",
    "psycopg2-binary>=2.9",
    "pdfplumber>=0.11",
    "google-genai>=1.0",
    "fpdf2>=2.8",
    "msal>=1.28",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "flet-cli>=0.82.0",
    "flet-desktop>=0.82.0",
    "flet-web>=0.82.0",
]

[tool.flet]
org = "com.mycompany"
product = "proyecto-rh"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
